--- a/app/src/main/res/layout/custom_review.xml
+++ b/app/src/main/res/layout/custom_review.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="Vickie Yap"
+            android:text="Tima RUPP"
             android:textColor="@color/primary_text" />
 
         <TextView
