--- a/app/src/main/res/drawable/google_pressed.xml
+++ b/app/src/main/res/drawable/google_pressed.xml
@@ -1,10 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-
-    <solid android:color="@color/google_press" />
-
-    <size
-        android:width="120dp"
-        android:height="120dp" />
+<?xml version="1.0" encoding="UTF-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/google_press"/>
 </shape>
