--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hammersmith.cammembercard.LoginActivity">
+    tools:context="com.hammersmith.cammembercard.RegisterActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:orientation="vertical"
                 android:padding="20dp">
@@ -35,21 +35,35 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:gravity="center"
-                    android:text="Login or Create Your New Account"
+                    android:text="Sign Up New Account"
                     android:textColor="@color/icons"
                     android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/input_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/transparent_white"
+                    android:fontFamily="sans-serif"
+                    android:hint="Username"
+                    android:padding="10dp"
+                    android:textColor="@color/icons"
+                    android:textColorHighlight="@color/icons"
+                    android:textColorHint="@color/icons"
+                    android:textSize="14sp" />
 
                 <EditText
                     android:id="@+id/input_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="20dp"
                     android:background="@color/transparent_white"
                     android:fontFamily="sans-serif"
                     android:hint="Email"
                     android:padding="10dp"
                     android:textColor="@color/icons"
-                    android:textColorHighlight="#9b9595"
+                    android:textColorHighlight="@color/icons"
                     android:textColorHint="@color/icons"
                     android:textSize="14sp" />
 
@@ -61,6 +75,21 @@
                     android:background="@color/transparent_white"
                     android:fontFamily="sans-serif"
                     android:hint="Password"
+                    android:inputType="textPassword"
+                    android:padding="10dp"
+                    android:textColor="@color/icons"
+                    android:textColorHighlight="@color/icons"
+                    android:textColorHint="@color/icons"
+                    android:textSize="14sp" />
+
+                k<EditText
+                    android:id="@+id/input_confirm_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/transparent_white"
+                    android:fontFamily="sans-serif"
+                    android:hint="Confirm Password"
                     android:inputType="textPassword"
                     android:padding="10dp"
                     android:textColor="@color/icons"
@@ -91,14 +120,14 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:fontFamily="sans-serif-light"
-                        android:text="Login"
+                        android:text="Sign Up"
                         android:textColor="@color/icons" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="20dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:weightSum="3">
@@ -222,7 +251,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/signUp"
+            android:id="@+id/signIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -235,7 +264,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
-                android:text="Don't have an account? Sign Up"
+                android:text="Already have an account? Sign In"
                 android:textColor="@color/primary_text" />
 
         </LinearLayout>
