--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,13 +10,15 @@
     <color name="divider">#dcdcdc</color>
     <color name="divider_light">#f5f5f5</color>
     <color name="red">#e12f07</color>
-    <color name="red_light">#f44e28</color>
+    <color name="red_light">#f16544</color>
+    <color name="red_press">#e45433</color>
     <color name="facebook">#3b5998</color>
     <color name="facebook_press">#2f4e8e</color>
     <color name="green">#28c748</color>
     <color name="red_dark">#c92702</color>
     <color name="bgLogin">#5baded</color>
-    <color name="transparent_white">#50ffffff</color>
+    <color name="transparent_white">#70ffffff</color>
+    <color name="transparent_white_dark">#80ffffff</color>
     <color name="google">#D84B37</color>
     <color name="google_press">#d73f2a</color>
 </resources>
