--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -101,8 +101,7 @@
                                         android:id="@+id/image"
                                         android:layout_width="270dp"
                                         android:layout_height="165dp"
-                                        android:scaleType="centerCrop"
-                                        android:src="@drawable/member_carjpg" />
+                                        android:scaleType="centerCrop"/>
                                 </LinearLayout>
 
                             </android.support.v7.widget.CardView>
@@ -121,7 +120,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="EXP. 31 DEC 2016"
+                        android:id="@+id/expDate"
                         android:textAllCaps="true"
                         android:textColor="@color/primary_text" />
 
@@ -169,7 +168,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Brown Coffee Cambodia"
+                            android:id="@+id/name"
                             android:textColor="@color/primary_text"
                             android:textSize="18sp" />
 
