--- a/app/src/main/res/layout/custom_album.xml
+++ b/app/src/main/res/layout/custom_album.xml
@@ -11,7 +11,6 @@
         android:layout_height="120dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/cake" />
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
