--- a/app/src/main/res/layout/custom_card_item.xml
+++ b/app/src/main/res/layout/custom_card_item.xml
@@ -52,7 +52,6 @@
                             android:background="@color/divider"
                             android:elevation="5dp"
                             android:padding="2dp"
-                            android:src="@drawable/img_brown"
                             app:border_width="0dip"
                             app:is_oval="true"
                             app:round_background="true" />
@@ -141,8 +140,7 @@
                                 android:id="@+id/image_card"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/member_carjpg" />
+                                android:scaleType="centerCrop"/>
 
                         </android.support.v7.widget.CardView>
 
