--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,11 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#03A9F4</color>
-    <color name="primary_light">#aed8fa</color>
+    <color name="primary_light">#b9daf5</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#5b5b5b</color>
     <color name="icons">#FFFFFF</color>
-    <color name="divider">#dcdcdc</color>
+    <color name="divider">#d1d0d0</color>
     <color name="divider_light">#f5f5f5</color>
     <color name="red">#e12f07</color>
     <color name="red_light">#f16544</color>
